syntax = "proto3";

import "google/protobuf/timestamp.proto";

// Represent Historical Swap record
message _HistorySwap {
  // Unique swap identifier
  optional string id                          = 1;

  // Unique external swap identifier
  optional string order_id                    = 2;

  // Dex identifier
  string provider                             = 3;

  // Status of the swap
  string status                               = 4;

  // Chain ID of the source blockchain
  uint64 from_chain_id                        = 5;

  // Source token contract address
  string from_contract_address                = 6;
  
  // Source wallet address
  string from_address                         = 7;

  // Source token amount
  string from_amount                          = 8;

  // Chain ID of the destination blockchain
  uint64 to_chain_id                          = 9;

  // Destination token contract address
  string to_contract_address                  = 10;

  // Destination wallet address
  string to_address                           = 11;

  // Destination token's amount
  string to_amount                            = 12;

  // List of transaction hashes associated with the swap
  repeated string hashes                      = 13;

  // Primary hash from the source transaction
  string hash_from                            = 14;

  // Optional hash to the destination transaction
  optional string hash_to                     = 15;

  // Replacement hashes for failed, retried, or replacement swaps
  map <string, string> replaceHashes          = 16;

  // Timestamp when the swap was recorded
  google.protobuf.Timestamp timestamp         = 17;

  // Optional timestamp of last update
  google.protobuf.Timestamp updated_at        = 18;
}
